Update styling to be consistent across selection of day.

--- a/src/components/DayListItem.scss
+++ b/src/components/DayListItem.scss
@@ -21,6 +21,11 @@
     &--selected {
       background-color: darken($white, 5%);
       color: $dark-background;
+      height: 5rem;
+      padding-left: 2rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
 
       &:hover {
         background-color: darken($white, 5%);
@@ -29,6 +34,11 @@
 
     &--full {
       opacity: $inactive-opacity;
+      height: 5rem;
+      padding-left: 2rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
   }
 }
